# lssa

./: CMakeLists.txt  README.md  RUNME.sh  build.sh  env.sh  help.txt  install.sh
doc/: help.txt
src/: info.hh  main.cc
src/app/: app.cc  app.hh
src/ob/: algorithm.hh  belle.hh  parg.hh  string.cc  string.hh  term.hh  text.hh
